First pass move ITs to separate module